--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dependency_graph/vendor/Nodz"]
 	path = dependency_graph/vendor/Nodz
-	url = https://github.com/Golaem/Nodz.git
+	url = https://github.com/chris-gardner/Nodz.git
