round 2 of adding branch to nodz submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "dependency_graph/vendor/Nodz"]
 	path = dependency_graph/vendor/Nodz
 	url = https://github.com/chris-gardner/Nodz.git
+	branch = main
