more node type detection. variants is still too bloody ambiguous.

--- a/dependency_graph/nodz_config.json
+++ b/dependency_graph/nodz_config.json
@@ -62,6 +62,34 @@
         "text": [230, 230, 230, 255]
     },
 
+    "node_payload": {
+        "bg": [80, 128, 80, 255],
+        "border": [50, 50, 50, 255],
+        "border_sel": [170, 80, 80, 255],
+        "text": [230, 230, 230, 255]
+    },
+
+    "node_variant": {
+        "bg": [128, 80, 80, 255],
+        "border": [50, 50, 50, 255],
+        "border_sel": [170, 80, 80, 255],
+        "text": [230, 230, 230, 255]
+    },
+
+    "node_reference": {
+        "bg": [80, 128, 128, 255],
+        "border": [50, 50, 50, 255],
+        "border_sel": [170, 80, 80, 255],
+        "text": [230, 230, 230, 255]
+    },
+
+    "node_specialize": {
+        "bg": [128, 80, 128, 255],
+        "border": [50, 50, 50, 255],
+        "border_sel": [170, 80, 80, 255],
+        "text": [230, 230, 230, 255]
+    },
+
     "attr_preset_1": {
         "bg": [60, 60, 60, 255],
         "text": [220, 220, 220, 255],
