--- a/usd_noodle/nodz_config.json
+++ b/usd_noodle/nodz_config.json
@@ -90,6 +90,13 @@
         "text": [230, 230, 230, 255]
     },
 
+    "node_texture": {
+        "bg": [200, 150, 75, 255],
+        "border": [50, 50, 50, 255],
+        "border_sel": [170, 80, 80, 255],
+        "text": [230, 230, 230, 255]
+    },
+
     "attr_preset_1": {
         "bg": [60, 60, 60, 255],
         "text": [220, 220, 220, 255],
