--- a/usd_noodle/nodz_config.json
+++ b/usd_noodle/nodz_config.json
@@ -90,6 +90,13 @@
         "text": [230, 230, 230, 255]
     },
 
+    "node_material": {
+        "bg": [128, 80, 128, 255],
+        "border": [50, 50, 50, 255],
+        "border_sel": [255, 155, 0, 255],
+        "text": [230, 230, 230, 255]
+    },
+
     "node_texture": {
         "bg": [190, 140, 70, 255],
         "border": [50, 50, 50, 255],
